CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_info_hist__x/fields/cde_type_info_case__c.field-meta.xml
<CustomField>
    <fullName>cde_type_info_case__c</fullName>
    <description>cde_type_info_case</description>
    <externalDeveloperName>cde_type_info_case</externalDeveloperName>
    <label>Case Information Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>