CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_info_hist__x/fields/idn_sbsd_case_info__c.field-meta.xml
<CustomField>
    <fullName>idn_sbsd_case_info__c</fullName>
    <description>idn_sbsd_case_info</description>
    <externalDeveloperName>idn_sbsd_case_info</externalDeveloperName>
    <label>Case Information ID</label>
    <length>50</length>
    <referenceTargetField>T_SBSD_CASE_INFO__c.IDN_EXTNL__c</referenceTargetField>
    <referenceTo>T_SBSD_CASE_INFO__c</referenceTo>
    <relationshipLabel>Case Information Legacy History</relationshipLabel>
    <relationshipName>sfrosit_t_sbsd_case_info_hist</relationshipName>
    <type>IndirectLookup</type>
</CustomField>