CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_info_hist__x/fields/ind_record_delete_logcl__c.field-meta.xml
<CustomField>
    <fullName>ind_record_delete_logcl__c</fullName>
    <externalDeveloperName>ind_record_delete_logcl</externalDeveloperName>
    <label>Logical delete indicator</label>
    <length>1</length>
    <type>Text</type>
</CustomField>