CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_info_hist__x/fields/txt_value_info_case__c.field-meta.xml
<CustomField>
    <fullName>txt_value_info_case__c</fullName>
    <description>txt_value_info_case</description>
    <externalDeveloperName>txt_value_info_case</externalDeveloperName>
    <label>Case Information</label>
    <length>100</length>
    <type>Text</type>
</CustomField>